Fixed the layout on mobile to be more easily navigable

--- a/src/sass/base/_normalization.scss
+++ b/src/sass/base/_normalization.scss
@@ -35,6 +35,8 @@ html {
     scroll-behavior: smooth;
     scroll-padding-top: 50%;
 
+    scroll-snap-type: y mandatory;
+
     color-scheme: dark light;
 }
 
